# ChangeLog for dev-python/titlecase
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  29 Aug 2011; James Rowe <jnrowe@gmail.com> titlecase-0.5.1.ebuild:
  Switched to using PYTHON_TESTS_RESTRICTED_ABIS.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  25 Sep 2010; James Rowe <jnrowe@gmail.com> titlecase-0.5.1.ebuild:
  Keyworded x86.

  25 Sep 2010; James Rowe <jnrowe@gmail.com> titlecase-0.5.1.ebuild:
  Keyworded amd64.

  26 Aug 2010; James Rowe <jnrowe@gmail.com> titlecase-0.5.1.ebuild:
  Keyworded ~x86.

*titlecase-0.5.1 (26 Aug 2010)

  26 Aug 2010; James Rowe <jnrowe@gmail.com> +titlecase-0.5.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me [6ab].
