@@ -5,7 +5,7 @@ DIST titlecase-0.5.1.tar.gz 4144 RMD160 6b75b94f88200dc6e86647d7311048bc8948c3a1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7Apn0ACgkQzJrj3cAXR0kviACgsUvF7FIEMcij/jBRA2bZcP4u
-WtcAn15zk52BZnNr8HmkVDRUv/sCi91H
-=lfk9
+iEYEAREKAAYFAk9SYyYACgkQzJrj3cAXR0l8QwCdFnW+JMgdxMI0y7WUjHziY+bK
+iz4An2j7EsvSMkI61/X/dZw/IGyJDmk7
+=9QiV
 -----END PGP SIGNATURE-----
