@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/titlecase
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Mar 2012; James Rowe <jnrowe@gmail.com> titlecase-0.5.1.ebuild:
+  [QA] Comment clean up.
 
   14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
   Removed redundant herd info.
